--- a/index.html
+++ b/index.html
@@ -8,6 +8,137 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="wrapper">
+      <header class="header">
+        <div class="header__container">
+          <a href="#" class="header__logo"></a>
+          <div class="header__menu menu">
+            <div class="menu__icon">
+              <span></span>
+            </div>
+            <nav class="menu__body">
+              <ul class="menu__list">
+                <li>
+                  <a href="" class="menu__link">Раздел №1</a>
+                </li>
+                <li>
+                  <a href="" class="menu__link">Раздел №2</a>
+                </li>
+                <li>
+                  <a href="" class="menu__link">Раздел №3</a>
+                </li>
+                <li>
+                  <a href="" class="menu__link">Страница №1</a>
+                  <ul class="menu__sub-list">
+                    <li>
+                      <a href="" class="menu__sub-link">Раздел страницы №1</a>
+                    </li>
+                    <li>
+                      <a href="" class="menu__sub-link">Раздел страницы №2</a>
+                    </li>
+                    <li>
+                      <a href="" class="menu__sub-link">Раздел страницы №3</a>
+                    </li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="" class="menu__link">Страница №2</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </header>
+      <main class="page">
+        <section class="page__section page__section_1">
+          <h1 class="page__title">Статья №1</h1>
+          <div class="page__text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+          </div>
+        </section>
+        <section class="page__section page__section_2">
+          <h1 class="page__sub-title">Статья №2</h1>
+          <div class="page__text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+          </div>
+        </section>
+        <section class="page__section page__section_3">
+          <h1 class="page__sub-title">Статья №3</h1>
+          <div class="page__text">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil voluptate, veniam accusantium dolor sint sapiente cumque quisquam pariatur, sequi
+              itaque tempore modi assumenda quae eligendi veritatis atque at ipsa aliquid.
+            </p>
+          </div>
+        </section>
+      </main>
+    </div>
     <script src="js/script.js"></script>
   </body>
 </html>
